2005-08-16  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/hbci/hbci-interaction.c (inputBoxCB): Aaarg,
	fix extremely stupid bug that occasionally crashes the PIN entry.

2005-08-15  David Hampton  <hampton@employees.org>

	* src/engine/Query.c: Todd T. Fries patch for compilation on
	OpenBSD 64bit architectures.

2005-08-15  Derek Atkins  <derek@ihtfp.com>

	* src/business/business-core/business-core.scm:  need to
	  properly recurse in gnc:owner-get-owner-id.  there is no
	  gnc:owner-get-id API.

2005-07-17  Christian Stimming  <stimming@tuhh.de>

	* macros/openhbci.m4: Remove old unused macros. Add macro name
	quotations as required by newer automake.

2005-07-10  David Hampton  <hampton@employees.org>

	* src/engine/iso-4217-currencies.scm: Add the new Romanian Leu.

2005-05-23  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/hbci/dialog-hbcitrans.c: Fix handling of debit
	notes -- they were broken at all times since the aqbanking
	transition, oops.

	* src/import-export/hbci/dialog-hbcitrans.c: Add sanity checks and
	ask user when there are no purpose lines.

2005-05-06  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/hbci/druid-hbci-initial.c (on_aqhbci_button):
	Finally generalize the AqBanking setup call. Now the setup wizard
	for OFX-DirectConnect can be called by Tools -> HBCI Setup as
	well.

2005-05-05  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/hbci/gnc-hbci-utils.c: Improve debugging
	messages.

2005-04-21  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/hbci/gnc-hbci-getbalance.c: Fix forgotten NULL
	check as reported by Martin Preuss <aquamaniac@gmx.de>.

2005-04-14  David Hampton  <hampton@employees.org>

	* src/engine/iso-4217-currencies.scm: 
	* src/engine/gnc-commodity.c: Update the Bulgarian Lev and add the
	Malagasy Ariary.

2005-04-06  Christian Stimming  <stimming@tuhh.de>

	* po/rw.po, po/glossary/rw.po: Add Kinyarwanda translation by